src/snapshots/wabbit_compiler__ast_printer__tests__format_func@abc.snap
---
source: src/ast_printer.rs
expression: format_func(func_abc)
---
func abc(a, b, c) {
    print a * (b + c);
}
