src/snapshots/wabbit_compiler__ast_printer__tests__format_func@xyz.snap
---
source: src/ast_printer.rs
expression: format_func(func_xyz)
---
func xyz(x, y, z) {
    while x < y {
        print x * (y + z);
    }
}
