src/snapshots/wabbit_compiler__ast_printer__tests__format_func@xyz_abc.snap
---
source: src/ast_printer.rs
expression: format_func(func_xyz_abc)
---
func xyz(x, y, z) {
    while x < y {
        print x * (y + z);
        print 5;
    }
}
